事务相关代码优化